--- a/dubbo-provider/src/main/resources/application.yml
+++ b/dubbo-provider/src/main/resources/application.yml
@@ -1,18 +1,23 @@
 dubbo:
   application:
+    ser
     name: dubbo-provider
+    service-discovery:
   protocol:
     name: dubbo
     port: -1
   registry:
     address: zookeeper://${zookeeper.address:127.0.0.1}:21810
+
+    # 可选值 interface、instance、all，默认是 all，即接口级地址、应用级地址都注册
+    register-mode: instance
+
   provider:
     # 线程模型设置（dubbo netty） all 使用dubbo自己的线程 org.apache.dubbo.remoting.Dispatcher
     dispatcher: all
 
     # 服务提供方超时中断流程设置
     timeout: 30000
-
 
 
 server:
