application config error

--- a/dubbo-provider/src/main/resources/application.yml
+++ b/dubbo-provider/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 dubbo:
   application:
-    ser
     name: dubbo-provider
-    service-discovery:
+#    service-discovery:
   protocol:
     name: dubbo
     port: -1
