--- a/dubbo-provider/pom.xml
+++ b/dubbo-provider/pom.xml
@@ -33,6 +33,23 @@
                     <artifactId>slf4j-reload4j</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
+                 <exclusion>
+                    <artifactId>zookeeper</artifactId>
+                    <groupId>com.apache.zookeeper</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.8</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-reload4j</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+
             </exclusions>
         </dependency>
 
