zk address config

--- a/dubbo-consumer/src/main/resources/application.yml
+++ b/dubbo-consumer/src/main/resources/application.yml
@@ -6,7 +6,7 @@ dubbo:
     name: dubbo
     port: -1
   registry:
-    address: zookeeper://${zookeeper.address:127.0.0.1}:21810
+    address: zookeeper://${zookeeper.address:127.0.0.1:2181}
   consumer:
     #为整个消费方添加启动不检查提供方服务是否正常
     check: false
