--- a/dubbo-provider/src/main/resources/application.yml
+++ b/dubbo-provider/src/main/resources/application.yml
@@ -5,9 +5,9 @@ dubbo:
 #    service-discovery:
   protocol:
     name: dubbo
-    port: -1
+#    port: -1
   registry:
-    address: zookeeper://${zookeeper.address:127.0.0.1}:21810
+    address: zookeeper://${zookeeper.address:127.0.0.1:2181}
 
     # 可选值 interface、instance、all，默认是 all，即接口级地址、应用级地址都注册
     register-mode: instance
@@ -21,6 +21,7 @@ dubbo:
 
     # 静态打标
     tag: gray
+    register: true
 
 
 server:
